force-app/main/default/objects/Quote__c/fields/Additional_Charge__c.field-meta.xml
<CustomField>
    <fullName>Additional_Charge__c</fullName>
    <label>Additional Charge</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>