force-app/main/default/objects/Quote__c/fields/Enquiry_Id__c.field-meta.xml
<CustomField>
    <fullName>Enquiry_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Enquiry Id</label>
    <referenceTo>Enquiry__c</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>