force-app/main/default/objects/Quote__c/fields/Labour_Charges__c.field-meta.xml
<CustomField>
    <fullName>Labour_Charges__c</fullName>
    <label>Labour Charges</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>