force-app/main/default/objects/Quote__c/fields/Surveyor_Operation_Cost__c.field-meta.xml
<CustomField>
    <fullName>Surveyor_Operation_Cost__c</fullName>
    <label>Surveyor Operation Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>