force-app/main/default/objects/Quote__c/recordTypes/Assign_VF_Page.recordType-meta.xml
<RecordType>
    <fullName>Assign_VF_Page</fullName>
    <active>true</active>
    <description>Assign VF page to record type</description>
    <label>Assign VF Page</label>
</RecordType>