force-app/main/default/objects/Quote__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Enquiry_Id__c</columns>
    <columns>Surveyor_Operation_Cost__c</columns>
    <columns>Status__c</columns>
    <columns>Actual_Cost__c</columns>
    <columns>Total_Cost__c</columns>
    <columns>GST__c</columns>
    <columns>Labour_Charges__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>